# fastfind

./: LICENSE  README.md  pyproject.toml
src/fastfind/: __init__.py  fastfind.py
