[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastfind"
version = "1.0.0"
authors = [{ name="Basti0307"},]
license = { text = "MIT" }
description = "Fast Windows/Linux file and directory search engine library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/Basti0307/fastfind"

[tool.setuptools.packages.find]
where = ["src"]
